# SystemForROS

./: README.md  calibration.cpp
Registration/: package.xml  plugin_registration.xml  setup.cfg  setup.py
Registration/Registration/: ICP.py  __init__.py  pca_icp.py  rqt_registration.py  rqt_registration_widget.py  vtk_show.py
azure-kinect-driver-ros2-humble/: CMakeLists.txt  package.xml
azure-kinect-driver-ros2-humble/src/: mode_reginaze.cpp  point_cloud_publish.cpp  point_cloud_saver.cpp  point_cloud_viewer.cpp
camera/: package.xml  plugin_system.xml  rgb_camera.yaml  setup.py
camera/camera/: Extrinsics_publish_node.py  __init__.py  camera_calibration_node.py  common_launch.py  rqt_system_widget.py
camera/launch/: camera_launch.py  system.launch.py
easy_handeye2/easy_handeye2/: plugin_calibrator.xml  setup.py
easy_handeye2/easy_handeye2/easy_handeye2/: common_launch.py  handeye_calibration.py  handeye_robot.py  handeye_rqt_calibrator.py  handeye_rqt_calibrator_widget.py  handeye_rqt_evaluator.py  handeye_rqt_evaluator_widget.py
easy_handeye2/easy_handeye2/launch/: calibrate.launch.py  evaluate.launch.py  publish.launch.py
easy_handeye2/easy_handeye2/resource/: rqt_handeye.ui
execute_movement/: package.xml  plugin_execute.xml  setup.cfg  setup.py
execute_movement/execute_movement/: Image_dispalay.py  Path_display.py  Robot_Act.py  Robot_move_client.py  Robot_move_server.py  __init__.py  move_test.py  rqt_execute_movement.py  rqt_execute_movement_widget.py
execute_movement/execute_movement_msgs/: CMakeLists.txt  package.xml
execute_movement/launch/: robot_server.launch.py
execute_movement/resource/: act.ui
path_plan/: package.xml  plugin_path_plan.xml  setup.py
path_plan/path_plan/: Path_calculate.py  rqt_path_plan.py  rqt_path_plan_widget.py
path_plan/resource/: Path_Plan.ui  act.ui
registration/: package.xml  plugin_registration.xml  setup.cfg  setup.py
registration/registration/: __init__.py  pca_icp.py  point_cloud_get.py  rqt_registration.py  rqt_registration_widget.py
registration/resource/: Registration.ui
registration/scripts/: rqt_registration.py
robot_act_move/: CMakeLists.txt  package.xml
robot_act_move/include/: RobotAct.hpp
robot_act_move/launch/: robot_server.launch.py
robot_act_move/src/: RobotAct.cpp  move_test.cpp  robot_server.cpp
surgery_system/: package.xml  setup.cfg  setup.py
surgery_system/resource/: system.ui
surgery_system/surgery_system/: rqt_system_widget.py  rqt_systemui.py
