<?xml version="1.0"?>
<package format="3">
  <name>robot_act_move</name>
  <version>0.0.1</version>
  <description>Your package description</description>
  <maintainer email="2563072882@qq.com">ZJC</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>execute_movement_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>rcl_interfaces</build_depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning</depend>
  <depend>urdfdom</depend>
  <depend>urdfdom-headers</depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>execute_movement_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  
</package>
