<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>surgery_system</name>
  <version>1.0.0</version>
  <description>for camera to pulish Extrinsics</description>
  <maintainer email="2563072882@qq.com">DUT-ZJC</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vtk</exec_depend>
  
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
        <rqt_gui plugin="${prefix}/plugin_system.xml" />
        <build_type>ament_python</build_type>
  </export>
</package>
